<resources>
    <string name="app_name">My Credible</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="location">Location</string>
    <string name="links">Links</string>
    <string name="skills">Skills</string>
    <string name="save">Save</string>
    <string name="professional_details">Professional Details</string>
    <string name="organisation">Organisation</string>
    <string name="designation">Designation</string>
    <string name="currently_working">Currently Working</string>
    <string name="start_date">Start Date</string>
    <string name="educational_details">Educational Details</string>
    <string name="degree">Degree</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
