<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/linearLayout4">


    <ImageView
            android:id="@+id/edu_image_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_small"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView5"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/educational_details"
            android:id="@+id/textView5" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="296dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/organization_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/organisation"
            android:inputType="text"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <EditText
            android:id="@+id/degree_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/degree"
            android:inputType="text"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/organization_edit_text"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <EditText
            android:id="@+id/location_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/degree_edit_text"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/start_year_spinner" android:layout_marginEnd="197dp"
            android:layout_marginRight="197dp" app:layout_constraintTop_toTopOf="@+id/start_year_spinner"/>

    <Spinner
            android:id="@+id/start_year_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/year_items"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/location_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="End Date"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/end_year_spinner" android:layout_marginEnd="197dp"
            android:layout_marginRight="197dp" app:layout_constraintTop_toTopOf="@+id/end_year_spinner"/>

    <Spinner
            android:id="@+id/end_year_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/year_items"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/start_year_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
    />


    <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="#c5c5c5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:layout_marginBottom="44dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>