<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/linearLayout">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/logo_small"
               android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
               android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
               android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toTopOf="@+id/loginEmail"/>

    <EditText android:layout_width="0dp"
              android:hint="@string/email"
              android:inputType="textEmailAddress"
              android:textSize="15dp"
              android:id="@+id/loginEmail"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_height="50dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
              android:layout_marginBottom="36dp" app:layout_constraintBottom_toTopOf="@+id/loginPassword"/>

    <EditText android:layout_width="0dp"
              android:hint="@string/password"
              android:inputType="textWebPassword"
              android:id="@+id/loginPassword"
              android:textSize="15dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" android:layout_marginBottom="48dp"
              app:layout_constraintBottom_toTopOf="@+id/loginButton" android:layout_height="50dp"/>

    <Button android:layout_width="0dp"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimaryDark"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signupButton"/>

    <Button android:layout_width="0dp"
            android:text="@string/sign_up"
            android:id="@+id/signupButton"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#c5c5c5"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
    />


</android.support.constraint.ConstraintLayout>