<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/main_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".MainScreenActivity">


    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:layout_scrollFlags="scroll|enterAlways">

            </android.support.v7.widget.Toolbar>

            <android.support.v7.widget.CardView
                    android:id="@+id/view2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    android:layout_gravity="center"
                    app:cardCornerRadius="100dp">

                <ImageView android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:id="@+id/displayPic"/>

            </android.support.v7.widget.CardView>

            <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TabItem
                        android:id="@+id/tabItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_details"/>

                <android.support.design.widget.TabItem
                        android:id="@+id/tabItem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/educational_details"/>

                <android.support.design.widget.TabItem
                        android:id="@+id/tabItem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/professional_details"/>

            </android.support.design.widget.TabLayout>



        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</android.support.design.widget.CoordinatorLayout>